--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   ],
   "main": "src/index.js",
   "dependencies": {
+    "@csstools/normalize.css": "11.0.1",
     "@material-ui/core": "4.12.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
