--- a/package.json
+++ b/package.json
@@ -10,9 +10,14 @@
   "dependencies": {
     "@csstools/normalize.css": "11.0.1",
     "@material-ui/core": "4.12.1",
+    "@types/react-redux": "7.1.18",
+    "@types/react-transition-group": "4.4.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-scripts": "4.0.0"
+    "react-redux": "7.2.4",
+    "react-scripts": "4.0.0",
+    "react-toastify": "7.0.4",
+    "redux-devtools-extension": "2.13.9"
   },
   "devDependencies": {
     "@babel/runtime": "7.13.8",
